update home, about, footer, add CK form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
       <main>
         {{ content }}
       </main>
+      
+      {% include footer.html %}
 
     </div>
     {% if site.analytics_id %}
