--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,6 +25,7 @@ $border-color: #e5e5e5;
 
 $large-breakpoint: 30em;
 $large-font-size: 23px;
+$small-font-size: 20px;
 // $large-font-size: 23px;
 
 $code-font-family: Menlo, Monaco, "Courier New", monospace;
