--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <br />
   <p>made with ❤️ by 
-    <a href="https://twitter.com/josh_works">Josh Thompson</a>
+    <a href="https://josh.works/">Josh Thompson</a>
   </p>
 </footer>
