--- a/_layouts/jekyll-regex-fix-series.html
+++ b/_layouts/jekyll-regex-fix-series.html
@@ -4,8 +4,10 @@ layout: default
 
 <article class="page">
   <h1 class="page-title">{{ page.title }}</h1>
-
+  
+  <h3>table of contents for <em>this</em> post</h3>
   {% include toc.html html=content %}
   
   {{ content }}
+  
 </article>
