add styled anchor links to h1-h6

--- a/_layouts/jekyll-bug-fix-series.html
+++ b/_layouts/jekyll-bug-fix-series.html
@@ -13,7 +13,8 @@ layout: default
   
   <h3>{{ page.series_part }} Table of Contents</h3>
   
-  {% include toc.html html=content %}
+  {% include anchor_headings.html html=content anchorBody="#" anchorClass="anchor"%}
+
   
   {{ content }}
 </div>
