--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,6 @@
     {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
-     <script src="instantpage-2.0.0.js?v1" type="module" defer></script> 
+     <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
   </body>
 </html>
