--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,10 @@
 <footer>
   <br />
-  <p>made with ❤️ by 
-    <a href="https://josh.works/">Josh Thompson</a>
-  </p>
+  This website made (and these words written) with ❤️ by Josh Thompson:
+  <ul>
+    <li><a href="https://josh.works/">www.josh.works</a></li>
+    <li><a href="https://twitter.com/josh_works">twitter.com/josh_works</a></li>
+    <li><a href="https://github.com/josh-works/">github.com/josh-works</a></li>
+    <li><a href="mailto:josh@intermediateruby.com">josh@intermediateruby.com</a></li>
+  </ul>
 </footer>
