--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,9 +11,11 @@
 }
 
 footer {
-  p { 
     text-align: center;
     font-size: $small-font-size;
+    list-style-type: none;
+  ul {
+    list-style:none;
   }
 }
 
